--- a/Rebalance.ipynb
+++ b/Rebalance.ipynb
@@ -56,96 +56,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>symbol</th>\n",
-       "      <th>quantity</th>\n",
-       "      <th>price</th>\n",
-       "      <th>dollar_value</th>\n",
-       "      <th>weight</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>ETH</td>\n",
-       "      <td>4.005586</td>\n",
-       "      <td>379.229492</td>\n",
-       "      <td>1519.036196</td>\n",
-       "      <td>0.200454</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>BNB</td>\n",
-       "      <td>115.292220</td>\n",
-       "      <td>13.156955</td>\n",
-       "      <td>1516.894588</td>\n",
-       "      <td>0.200171</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>BTC</td>\n",
-       "      <td>0.225001</td>\n",
-       "      <td>6733.000000</td>\n",
-       "      <td>1514.934426</td>\n",
-       "      <td>0.199913</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>OMG</td>\n",
-       "      <td>313.790000</td>\n",
-       "      <td>4.827561</td>\n",
-       "      <td>1514.840366</td>\n",
-       "      <td>0.199900</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>XRP</td>\n",
-       "      <td>3945.319000</td>\n",
-       "      <td>0.383310</td>\n",
-       "      <td>1512.279003</td>\n",
-       "      <td>0.199562</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  symbol     quantity        price  dollar_value    weight\n",
-       "0    ETH     4.005586   379.229492   1519.036196  0.200454\n",
-       "1    BNB   115.292220    13.156955   1516.894588  0.200171\n",
-       "2    BTC     0.225001  6733.000000   1514.934426  0.199913\n",
-       "3    OMG   313.790000     4.827561   1514.840366  0.199900\n",
-       "4    XRP  3945.319000     0.383310   1512.279003  0.199562"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "file = \"C:/Users/Carter Carlson/Documents/Excel References/secret.csv\"\n",
     "api = pd.read_csv(file)\n",
@@ -153,7 +66,45 @@
     "balance = exchange.fetchBalance()\n",
     "coins = []\n",
     "[coins.append(asset['asset']) for asset in balance['info']['balances'] if float(asset['free']) > 0]\n",
-    "update_data(coins)"
+    "data = update_data(coins)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'08/09/2018'"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = datetime.now()\n",
+    "a.strftime('%m/%d/%Y')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2018-08-09 17:41:48.744137\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(datetime.now())"
    ]
   },
   {
@@ -189,64 +140,6 @@
     "    balance = exchange.fetchBalance()\n",
     "    data = update_data(coins)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 113,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import ccxt\n",
-    "from datetime import datetime\n",
-    "from openpyxl import load_workbook\n",
-    "import jedi\n",
-    "\n",
-    "excel_file = 'test_excel.xlsx'\n",
-    "wb = load_workbook(file)\n",
-    "sheet = wb.active\n",
-    "row_num = sheet.max_row\n",
-    "test = sheet.cell(row=row_num, column=1).value\n",
-    "\n",
-    "trade_id = int(sheet.cell(row=row_num, column=1).value) + 1\n",
-    "first_trade = None\n",
-    "if not first_trade:\n",
-    "    rebalance_id = sheet.cell(row=row_num, column=2).value\n",
-    "else:\n",
-    "    rebalance_id = sheet.cell(row=row_num, column=2).value + 1\n",
-    "\n",
-    "trade_date = '2018-08-16'\n",
-    "ticker = 'ETH/BTC'\n",
-    "ticker1 = ticker[:4]\n",
-    "ticker2 = ticker[4:]\n",
-    "dollar_value = 100\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "new_order = [trade_id, rebalance_id, trade_date, ticker1, ticker2, dollar_value]\n",
-    "\n",
-    "for i in range(len(new_order)):\n",
-    "    sheet.cell(row=row_num,column=i+1).value = new_order[i]\n",
-    "\n",
-    "wb.save(file)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 112,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "wb.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
