--- a/Rebalance.ipynb
+++ b/Rebalance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,45 +71,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>symbol</th>\n",
+       "      <th>quantity</th>\n",
+       "      <th>price</th>\n",
+       "      <th>dollar_value</th>\n",
+       "      <th>weight</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ETH</td>\n",
+       "      <td>4.163586</td>\n",
+       "      <td>324.174312</td>\n",
+       "      <td>1349.727501</td>\n",
+       "      <td>0.202707</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>BTC</td>\n",
+       "      <td>0.210450</td>\n",
+       "      <td>6408.000000</td>\n",
+       "      <td>1348.566740</td>\n",
+       "      <td>0.202533</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>XRP</td>\n",
+       "      <td>4346.019000</td>\n",
+       "      <td>0.308161</td>\n",
+       "      <td>1339.272344</td>\n",
+       "      <td>0.201137</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>BNB</td>\n",
+       "      <td>110.221764</td>\n",
+       "      <td>11.901578</td>\n",
+       "      <td>1311.812960</td>\n",
+       "      <td>0.197013</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>OMG</td>\n",
+       "      <td>308.140000</td>\n",
+       "      <td>4.248504</td>\n",
+       "      <td>1309.134023</td>\n",
+       "      <td>0.196611</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "'08/09/2018'"
+       "  symbol     quantity        price  dollar_value    weight\n",
+       "0    ETH     4.163586   324.174312   1349.727501  0.202707\n",
+       "1    BTC     0.210450  6408.000000   1348.566740  0.202533\n",
+       "2    XRP  4346.019000     0.308161   1339.272344  0.201137\n",
+       "3    BNB   110.221764    11.901578   1311.812960  0.197013\n",
+       "4    OMG   308.140000     4.248504   1309.134023  0.196611"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a = datetime.now()\n",
-    "a.strftime('%m/%d/%Y')"
+    "data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2018-08-09 17:41:48.744137\n"
-     ]
+     "data": {
+      "text/plain": [
+       "0.1987600568713318"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(datetime.now())"
+    "data['weight'][len(data) - 1]\n",
+    "#data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = set()\n",
+    "for i in tickers:\n",
+    "    test.add(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +213,7 @@
     "data = update_data(coins)\n",
     "        \n",
     "n = 1/len(coins)\n",
-    "thresh = .02\n",
+    "thresh = .01\n",
     "i = 1\n",
     "\n",
     "while data['weight'][0] - data['weight'][len(data) - 1] > 2 * n * thresh:\n",
@@ -140,6 +230,13 @@
     "    balance = exchange.fetchBalance()\n",
     "    data = update_data(coins)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
