--- a/Rebalance.ipynb
+++ b/Rebalance.ipynb
@@ -91,7 +91,9 @@
   {
    "cell_type": "code",
    "execution_count": 191,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -128,9 +130,6 @@
     }
    ],
    "source": [
-    "from datetime import datetime\n",
-    "param = {'test':True}\n",
-    "\n",
     "def update_data(coins):\n",
     "    df = pd.DataFrame(columns=['symbol', 'quantity', 'price', 'dollar_value'])\n",
     "    btc_price = float(exchange.fetch_ticker('BTC/USDT')['info']['lastPrice'])\n",
@@ -149,69 +148,46 @@
     "    return df\n",
     "\n",
     "\n",
-    "def write_to_excel(ratio, side, coin_amt, dollar_amt, fees):\n",
-    "    wb = load_workbook(transaction_file)\n",
-    "    sheet = wb.active\n",
-    "    rebalance_id = sheet.cell(row=sheet.max_row, column=2).value + 1\n",
-    "    row_num = sheet.max_row\n",
-    "    trade_id = sheet.cell(row=row_num, column=1).value + 1\n",
-    "    trade_date = datetime.now()\n",
-    "    symbol1 = ratio[:3]\n",
-    "    symbol2 = ratio[4:]\n",
-    "    single_trade = 'Y'\n",
-    "    if no_ticker:\n",
-    "        single_trade = 'N'\n",
-    "\n",
-    "    transaction = [trade_id, rebalance_id, trade_date, side, symbol1, symbol2, coin_amt, dollar_amt, fees, single_trade]\n",
-    "    for i in range(10):\n",
-    "        sheet.cell(row=row_num, column=i+1).value = transaction[i]\n",
-    "        \n",
-    "    wb.save(file) # Note: will this be an issue since wb was loaded before function?  does .save close wb?\n",
-    "\n",
-    "\n",
-    "def get_ticker(coin1, coin2):\n",
+    "def rebalance(coin1, coin2, weight_to_sell, tickers):\n",
     "    if coin1 + '/' + coin2 in tickers:\n",
-    "        return coin1 + '/' + coin2,\n",
+    "        order = coin1 + '/' + coin2, 'sell'\n",
     "    elif coin2 + '/' + coin1 in tickers:\n",
-    "        return coin2 + '/' + coin1,\n",
+    "        order = coin2 + '/' + coin1\n",
     "    else:\n",
-    "        return coin1 + '/BTC', coin2 + '/BTC'\n",
+    "        order = coin1 + '/BTC', 'sell', coin2 + '/BTC', 'buy'\n",
+    "\n",
+    "    dollar_amt = abs(weight_to_sell * data['dollar_value'].sum())\n",
+    "    for i in range(0, order, 2):\n",
+    "        coin_amt = float(dollar_amt / data.loc[data['symbol'] == order[i][:3], 'price'])\n",
+    "        single_trade = 'Y'\n",
+    "        if len(order) > 2:\n",
+    "            single_trade = 'N'\n",
+    "\n",
+    "        trade_coin(order[i], order[i+1], coin_amt, dollar_amt, fees, single_trade)\n",
     "\n",
     "\n",
-    "def trade_coin(ratio, side, coin_amt, dollar_amt, fees):\n",
-    "    exchange.create_order(ratio, 'market', side, coin_amt, param)\n",
-    "    write_to_excel(ratio, side, coin_amt, dollar_amt, fees)\n",
-    "\n",
-    "\n",
-    "def rebalance(coin1, coin2):\n",
-    "    dollar_amt = abs(weight_to_sell *  data['dollar_value'].sum())\n",
+    "def trade_coin(ratio, side, coin_amt, dollar_amt, single_trade):\n",
+    "    exchange.create_order(ratio, 'market', side, coin_amt)\n",
+    "    transactions = pd.read_excel('transactions.xlsx')\n",
+    "    num_rows = len(transactions.index)\n",
+    "    trade_id = transactions['trade_id'][num_rows] + 1\n",
+    "    trade_date = datetime.now()\n",
     "    fees = dollar_amt * .00075\n",
-    "    ticker = get_ticker(coin1, coin2)\n",
-    "    side = 'sell'\n",
-    "    try:\n",
-    "        coin_amt = float(dollar_amt / data.loc[data['symbol'] == ticker[1][:3], 'price'])\n",
-    "        no_ticker = True\n",
-    "        trade_coin(ticker[1], side, coin_amt, dollar_amt, fees)\n",
-    "    except:\n",
-    "        pass\n",
-    "    if any(coin2 + '/' in x for x in ticker):\n",
-    "        side = 'buy'\n",
-    "\n",
-    "    coin_amt = float(dollar_amt / data.loc[data['symbol'] == ticker[0][:3], 'price'])\n",
-    "    trade_coin(ticker[0], side, coin_amt, dollar_amt, fees)\n",
+    "    transaction = [trade_id, trade_date, side, ratio[:3], ratio[4:], coin_amt, dollar_amt, fees, single_trade]\n",
+    "    for i in range(transaction):\n",
+    "        wb = load_workbook('transactions.xlsx')\n",
+    "        ws = wb.worksheets[0]\n",
+    "        ws.cell(row=num_row+1, column=i+1).value = transaction[i]\n",
+    "        wb.save('transactions.xlsx')\n",
     "\n",
     "\n",
     "api_file = \"C:/Users/Carter Carlson/Documents/Excel References/secret.csv\"\n",
-    "transaction_file = 'transactions.xlsx'\n",
-    "no_ticker = None\n",
-    "#api = pd.read_csv(api_file)\n",
-    "exchange = ccxt.binance({'options': {'adjustForTimeDifference': True},'apiKey': api['apiKey'][0],'secret': api['secret'][0]}) \n",
+    "api = pd.read_csv(api_file)\n",
+    "exchange = ccxt.binance({'options': {'adjustForTimeDifference': True},'apiKey': api['apiKey'][0],'secret': api['secret'][0]})\n",
     "balance = exchange.fetchBalance()\n",
     "wallet = pd.DataFrame(balance['info']['balances'])\n",
     "\n",
     "coins = []\n",
-    "heavy_coins = []\n",
-    "light_coins = []\n",
     "tickers = set()\n",
     "[tickers.add(ticker) for ticker in exchange.fetchTickers()]\n",
     "coins = wallet.loc[wallet['free'].astype(float) > .1, 'asset'].tolist()\n",
@@ -221,22 +197,17 @@
     "avg_weight = 1/num_coins\n",
     "weight_thresh = avg_weight * thresh\n",
     "\n",
-    "\n",
-    "\n",
     "while True:\n",
     "    heavy_weight_dif = data['weight'][0] - avg_weight\n",
     "    light_weight_dif = avg_weight - data['weight'][num_coins-1]\n",
     "    if heavy_weight_dif < weight_thresh and light_weight_dif < weight_thresh:\n",
-    "        print('a')\n",
     "        break\n",
     "    elif heavy_weight_dif > light_weight_dif:\n",
-    "        print('b')\n",
     "        weight_to_sell = light_weight_dif\n",
     "    else:\n",
-    "        print('c')\n",
     "        weight_to_sell = heavy_weight_dif\n",
     "\n",
-    "    rebalance(data['symbol'][0], data['symbol'][num_coins-1])\n",
+    "    rebalance(data['symbol'][0], data['symbol'][num_coins-1], weight_to_sell, tickers)\n",
     "    data = update_data(coins)\n"
    ]
   }
