--- a/Trade.ipynb
+++ b/Trade.ipynb
@@ -56,32 +56,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "nOS2lq1Ki8ALGJyxtUJk5EfHsBPbD25gIYOi3xJNtNMtmSZodWp5Es0WIqsrIQbY\n",
-      "SkrnTWFTOSI4NmixdC8iVq5IDViDyHh7eHcsQyHLJZHe7X0nrdCjuuAkamlbt1jp\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>symbol</th>\n",
+       "      <th>quantity</th>\n",
+       "      <th>price</th>\n",
+       "      <th>dollar_value</th>\n",
+       "      <th>weight</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>XRP</td>\n",
+       "      <td>4198.819000</td>\n",
+       "      <td>0.373226</td>\n",
+       "      <td>1567.109372</td>\n",
+       "      <td>0.229990</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>OMG</td>\n",
+       "      <td>322.870000</td>\n",
+       "      <td>4.373182</td>\n",
+       "      <td>1411.969350</td>\n",
+       "      <td>0.207222</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>BNB</td>\n",
+       "      <td>124.016277</td>\n",
+       "      <td>10.572888</td>\n",
+       "      <td>1311.210228</td>\n",
+       "      <td>0.192434</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ETH</td>\n",
+       "      <td>4.117226</td>\n",
+       "      <td>314.639987</td>\n",
+       "      <td>1295.444022</td>\n",
+       "      <td>0.190120</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>BTC</td>\n",
+       "      <td>0.187588</td>\n",
+       "      <td>6546.680000</td>\n",
+       "      <td>1228.077626</td>\n",
+       "      <td>0.180234</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  symbol     quantity        price  dollar_value    weight\n",
+       "0    XRP  4198.819000     0.373226   1567.109372  0.229990\n",
+       "1    OMG   322.870000     4.373182   1411.969350  0.207222\n",
+       "2    BNB   124.016277    10.572888   1311.210228  0.192434\n",
+       "3    ETH     4.117226   314.639987   1295.444022  0.190120\n",
+       "4    BTC     0.187588  6546.680000   1228.077626  0.180234"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "file = 'C:/Users/Carter Carlson/Documents/Administrative/api.txt'\n",
     "with open(file, 'r') as f:\n",
     "    api = f.readlines()\n",
-    "    apiKey = str(api[0][:len(api[0])-1])\n",
-    "    secret = str(api[1][:len(api[1])])\n",
-    "    \n",
-    "print(apiKey)\n",
-    "print(secret)"
+    "    apiKey = api[0][:len(api[0])-1]\n",
+    "    secret = api[1][:len(api[1])]\n",
+    "exchange = ccxt.binance({\n",
+    "    'options': {'adjustForTimeDifference': True},\n",
+    "    'apiKey': apiKey,\n",
+    "    'secret': secret}) \n",
+    "balance = exchange.fetchBalance()\n",
+    "coins = []\n",
+    "[coins.append(asset['asset']) for asset in balance['info']['balances'] if float(asset['free']) > 0]\n",
+    "\n",
+    "update_data(coins)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -116,42 +200,42 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>ETH</td>\n",
-       "      <td>4.237491</td>\n",
-       "      <td>282.868716</td>\n",
-       "      <td>1198.653575</td>\n",
-       "      <td>0.204799</td>\n",
+       "      <td>4.364359</td>\n",
+       "      <td>314.318144</td>\n",
+       "      <td>1371.797155</td>\n",
+       "      <td>0.201540</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>BTC</td>\n",
-       "      <td>0.191365</td>\n",
-       "      <td>6257.050000</td>\n",
-       "      <td>1197.380561</td>\n",
-       "      <td>0.204581</td>\n",
+       "      <td>0.209635</td>\n",
+       "      <td>6540.800000</td>\n",
+       "      <td>1371.177338</td>\n",
+       "      <td>0.201449</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>XRP</td>\n",
-       "      <td>4198.819000</td>\n",
-       "      <td>0.280191</td>\n",
-       "      <td>1176.470031</td>\n",
-       "      <td>0.201009</td>\n",
+       "      <td>BNB</td>\n",
+       "      <td>128.012260</td>\n",
+       "      <td>10.603291</td>\n",
+       "      <td>1357.351229</td>\n",
+       "      <td>0.199418</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>OMG</td>\n",
-       "      <td>316.380000</td>\n",
-       "      <td>3.635346</td>\n",
-       "      <td>1150.150783</td>\n",
-       "      <td>0.196512</td>\n",
+       "      <td>XRP</td>\n",
+       "      <td>3642.119000</td>\n",
+       "      <td>0.371714</td>\n",
+       "      <td>1353.825398</td>\n",
+       "      <td>0.198900</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>BNB</td>\n",
-       "      <td>120.400878</td>\n",
-       "      <td>9.386826</td>\n",
-       "      <td>1130.182138</td>\n",
-       "      <td>0.193100</td>\n",
+       "      <td>OMG</td>\n",
+       "      <td>309.530000</td>\n",
+       "      <td>4.369254</td>\n",
+       "      <td>1352.415314</td>\n",
+       "      <td>0.198693</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -159,47 +243,16 @@
       ],
       "text/plain": [
        "  symbol     quantity        price  dollar_value    weight\n",
-       "0    ETH     4.237491   282.868716   1198.653575  0.204799\n",
-       "1    BTC     0.191365  6257.050000   1197.380561  0.204581\n",
-       "2    XRP  4198.819000     0.280191   1176.470031  0.201009\n",
-       "3    OMG   316.380000     3.635346   1150.150783  0.196512\n",
-       "4    BNB   120.400878     9.386826   1130.182138  0.193100"
+       "0    ETH     4.364359   314.318144   1371.797155  0.201540\n",
+       "1    BTC     0.209635  6540.800000   1371.177338  0.201449\n",
+       "2    BNB   128.012260    10.603291   1357.351229  0.199418\n",
+       "3    XRP  3642.119000     0.371714   1353.825398  0.198900\n",
+       "4    OMG   309.530000     4.369254   1352.415314  0.198693"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "file = 'C:/Users/Carter Carlson/Documents/Administrative/api.txt'\n",
-    "with open(file, 'r') as f:\n",
-    "    api = f.readlines()\n",
-    "    apiKey = api[0][:len(api[0])-1]\n",
-    "    secret = api[1][:len(api[1])]\n",
-    "exchange = ccxt.binance({\n",
-    "    'options': {'adjustForTimeDifference': True},\n",
-    "    'apiKey': apiKey,\n",
-    "    'secret': secret}) \n",
-    "balance = exchange.fetchBalance()\n",
-    "coins = []\n",
-    "[coins.append(asset['asset']) for asset in balance['info']['balances'] if float(asset['free']) > 0]\n",
-    "\n",
-    "update_data(coins)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'info': {'symbol': 'BNBETH', 'orderId': 36579392, 'clientOrderId': 'IZscqZ3yReyUz0Inla85BN', 'transactTime': 1534375391123, 'price': '0.00000000', 'origQty': '3.62000000', 'executedQty': '3.62000000', 'cummulativeQuoteQty': '0.12026450', 'status': 'FILLED', 'timeInForce': 'GTC', 'type': 'MARKET', 'side': 'BUY', 'fills': [{'price': '0.03320200', 'qty': '0.37000000', 'commission': '0.00027750', 'commissionAsset': 'BNB', 'tradeId': 8629986}, {'price': '0.03320300', 'qty': '1.01000000', 'commission': '0.00075750', 'commissionAsset': 'BNB', 'tradeId': 8629987}, {'price': '0.03320500', 'qty': '0.01000000', 'commission': '0.00000750', 'commissionAsset': 'BNB', 'tradeId': 8629988}, {'price': '0.03323100', 'qty': '1.10000000', 'commission': '0.00082500', 'commissionAsset': 'BNB', 'tradeId': 8629989}, {'price': '0.03323700', 'qty': '0.36000000', 'commission': '0.00027000', 'commissionAsset': 'BNB', 'tradeId': 8629990}, {'price': '0.03323800', 'qty': '0.77000000', 'commission': '0.00057750', 'commissionAsset': 'BNB', 'tradeId': 8629991}]}, 'id': '36579392', 'timestamp': 1534375391123, 'datetime': '2018-08-15T23:23:11.123Z', 'lastTradeTimestamp': None, 'symbol': 'BNB/ETH', 'type': 'market', 'side': 'buy', 'price': 0.0, 'amount': 3.62, 'cost': 0.0, 'filled': 3.62, 'remaining': 0.0, 'status': 'closed', 'fee': None}\n",
-      "{'info': {'symbol': 'OMGBTC', 'orderId': 30871611, 'clientOrderId': 'aO10TPOfxWASzrXhan4WOx', 'transactTime': 1534375392555, 'price': '0.00000000', 'origQty': '6.49000000', 'executedQty': '6.49000000', 'cummulativeQuoteQty': '0.00377718', 'status': 'FILLED', 'timeInForce': 'GTC', 'type': 'MARKET', 'side': 'BUY', 'fills': [{'price': '0.00058200', 'qty': '6.49000000', 'commission': '0.00188597', 'commissionAsset': 'BNB', 'tradeId': 7057883}]}, 'id': '30871611', 'timestamp': 1534375392555, 'datetime': '2018-08-15T23:23:13.555Z', 'lastTradeTimestamp': None, 'symbol': 'OMG/BTC', 'type': 'market', 'side': 'buy', 'price': 0.0, 'amount': 6.49, 'cost': 0.0, 'filled': 6.49, 'remaining': 0.0, 'status': 'closed', 'fee': None}\n"
-     ]
     }
    ],
    "source": [
@@ -227,109 +280,15 @@
     "    order = rebalance_order(data['symbol'][0], data['symbol'][len(data) - 1])\n",
     "    weight_to_move = (data['weight'][0] - data['weight'][len(data) - 1]) / 2\n",
     "    quantity = round(weight_to_move * data['dollar_value'].sum() / data[data['symbol'] == order[0][:3]]['price'].values[0], 5)\n",
-    "    print(exchange.create_order(order[0], 'market', order[1], quantity))\n",
+    "    exchange.create_order(order[0], 'market', order[1], quantity)\n",
     "    \n",
     "    if len(order) > 2:\n",
     "        quantity = round(weight_to_move * data['dollar_value'].sum() / data[data['symbol'] == order[2][:3]]['price'].values[0], 5)\n",
-    "        print(exchange.create_order(order[2], 'market', order[3], quantity))\n",
+    "        exchange.create_order(order[2], 'market', order[3], quantity)\n",
     "    \n",
     "    balance = exchange.fetchBalance()\n",
-    "    data = update_data(coins)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>symbol</th>\n",
-       "      <th>quantity</th>\n",
-       "      <th>price</th>\n",
-       "      <th>dollar_value</th>\n",
-       "      <th>weight</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>XRP</td>\n",
-       "      <td>4198.819000</td>\n",
-       "      <td>0.281152</td>\n",
-       "      <td>1180.506746</td>\n",
-       "      <td>0.201193</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>BTC</td>\n",
-       "      <td>0.187588</td>\n",
-       "      <td>6268.720000</td>\n",
-       "      <td>1175.935707</td>\n",
-       "      <td>0.200414</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>OMG</td>\n",
-       "      <td>322.870000</td>\n",
-       "      <td>3.642126</td>\n",
-       "      <td>1175.933325</td>\n",
-       "      <td>0.200413</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>BNB</td>\n",
-       "      <td>124.016277</td>\n",
-       "      <td>9.420006</td>\n",
-       "      <td>1168.234013</td>\n",
-       "      <td>0.199101</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>ETH</td>\n",
-       "      <td>4.117226</td>\n",
-       "      <td>283.427637</td>\n",
-       "      <td>1166.935714</td>\n",
-       "      <td>0.198880</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  symbol     quantity        price  dollar_value    weight\n",
-       "0    XRP  4198.819000     0.281152   1180.506746  0.201193\n",
-       "1    BTC     0.187588  6268.720000   1175.935707  0.200414\n",
-       "2    OMG   322.870000     3.642126   1175.933325  0.200413\n",
-       "3    BNB   124.016277     9.420006   1168.234013  0.199101\n",
-       "4    ETH     4.117226   283.427637   1166.935714  0.198880"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "    data = update_data(coins)\n",
+    "\n",
     "update_data(coins)"
    ]
   },
@@ -462,18 +421,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.5"
   }
  },
  "nbformat": 4,
